--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
+    "react-toast-notifications": "^2.4.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "rxjs": "^6.6.3",
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
+    "@types/react-toast-notifications": "^2.4.0",
     "@types/socket.io-client": "^1.4.34"
   }
 }
